--- a/explorar.html
+++ b/explorar.html
@@ -24,20 +24,20 @@
 		<script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 		<script defer>
-			// function mostrarCarrusel() {
-			// 	let carrusel = document.getElementById("carrusel");
-			// 	if (carrusel.style.display == "block") {
-			// 		carrusel.style.display = "none";
-			// 		let button = document.getElementById("carruselButton");
-			// 		button.innerHTML = "Ver jeroglíficos";
-			// 		return;
-			// 	} else if (carrusel.style.display == "none") {
-			// 		carrusel.style.display = "block";
-			// 		let button = document.getElementById("carruselButton");
-			// 		button.innerHTML = "Ocultar jeroglíficos";
-			// 		return;
-			// 	}
-			// }
+			function mostrarCarrusel() {
+				let carrusel = document.getElementById("carrusel");
+				if (carrusel.style.display == "block") {
+					carrusel.style.display = "none";
+					let button = document.getElementById("carruselButton");
+					button.innerHTML = "Ver jeroglíficos";
+					return;
+				} else if (carrusel.style.display == "none") {
+					carrusel.style.display = "block";
+					let button = document.getElementById("carruselButton");
+					button.innerHTML = "Ocultar jeroglíficos";
+					return;
+				}
+			}
 
 			// function botonA() {
 			// 	let bottonA = document.getElementById("A");
