--- a/inicio.html
+++ b/inicio.html
@@ -20,6 +20,7 @@
     <h1>Búsqueda del tesoro</h1>
     <div>
         <p>¡Bienvenido!<br>Historia..</p>
+        <p class="texto">¡Hola!</p>
         <a href="">Camino 1</a>
     </div>
 
